--- a/src/main/resources/static/css/style1.css
+++ b/src/main/resources/static/css/style1.css
@@ -47,6 +47,7 @@ h1,h2,h3,h4,h5,h6{
 
 }
 #identity{
+	padding-left: 13px;
 	width: 100%;
 	text-align: left;
 	display: inline-block;
@@ -62,7 +63,7 @@ h1,h2,h3,h4,h5,h6{
 }
 .identity{
 	margin-top: 20px;
-	margin-right: 115px;
+	margin-right: 95px;
 }
 .top-buttons-agileinfo {
     /* float: right; */
