--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,7 +70,63 @@ window._prum = [['id', '520b907babe53db940000001'],
 
   
 	<link rel="stylesheet" href="../static/css/index_site.css">
-
+	
+	
+	<script type="text/javascript">
+	window.onload=function(){
+		var submit=document.getElementById("submit-w3l-submit");
+		submit.onclick=function(){
+			
+		if(window.ActiveXObject&&!window.XMLHttpRequest){
+			window.XMLHttpRequest=function(){
+				xmlHttp=null;
+				try{
+					xmlHttp=new ActiveXObject("Msxml2.XMLHTTP");
+					
+				}catch(e){
+					try{
+						xmlHttp=new ActiveXObject("Microsoft.XMLHTTP")
+					}catch(el){
+						
+					}
+				}
+				return xmlHttp;
+			}
+		}
+		
+		var user={
+			account:"1",
+			password:"2"
+		}
+		
+		function prepareJSON(){
+			var accountInfo=document.getElementById("account").value;
+			var passwordInfo=document.getElementById("password").value;
+			user.account=accountInfo;
+			user.password=passwordInfo;
+			return user.toJSONString();
+		}
+		
+		
+		var xmlHttp=new XMLHttpRequest();
+		xmlHttp.open("POST","",true);
+		
+		xmlHttp.onreadystatechange==function(){
+			if(xmlHttp.readyState==4){
+				if(xmlHttp.status==200){
+					alert("1")
+				}
+			}
+		}
+		
+		var userJson=prepareJSON();
+		xmlHttp.send(userJson);
+		
+		}
+	}
+	</script>
+	
+	
   </head>
 
   <body >
@@ -241,19 +297,12 @@ window._prum = [['id', '520b907babe53db940000001'],
 	<div class="main-agileits">
 			<div class="form-w3-agile" style="width: 400px;	">
 			<form action="tea_home.html" target="_self" name="regForm" id="regForm" method="post">
-					<input type="text" name="username" placeholder="用户" required="" />
-					<input type="password" name="password" placeholder="密码" required="" />
-<!--					<input type="radio" >-->
-					<div id="identity">
-						<span id="identity_title">您的身份</span><br>
-						<span class="identity"><input type="radio" name="identity"  required="" aria-label="Single radio One"/>导师</span>
-						<span class="identity"><input type="radio" name="identity"  required=""/>学生	</span>
-						<div><label class="error" for="identity" style="display:none">请选择身份</label></div>
-						
-					</div>
+					<input id="account" type="text" name="username" placeholder="账号" required="" />
+					<input id="password" type="password" name="password" placeholder="密码" required="" />
+				
 					
 				<div class="submit-w3l" >
-					<div>
+					<div id="submit-w3l-submit">
 						<input type="submit" style="font-size: 1.4em;" value="登          录"/>
 					</div>
 				</div>
