--- a/src/main/resources/templates/stu_task.html
+++ b/src/main/resources/templates/stu_task.html
@@ -85,24 +85,26 @@ $(function (){
 
 <body>
 	<div id="banner">
-		<div id="banner_left"><div class="display">
+		<div id="banner_left" class="display"><div class="display" style="width: 70%">
 				<form class="form form-group" name="" method="post">
-				<input class="display form-control" style="width: 270px;border: 0px solid #ccc;" type="text"  placeholder="搜索个人项目">
+				<input class="display form-control" style="border: 0px solid #ccc;" type="text"  placeholder="搜索个人项目">
 			</form>
 			</div>
-			<div class="display" >
+			<div class="display" style="width: 10%" >
 			<img class="display" style="width:25px;margin-left: 10px;" alt="" src="../static/images/add.png"></div>
 		</div>
 		<div id="banner_mid" class="display" style="font-weight:500;font-size: 1.3em;"><center>师生项目交互平台</center></div>
-		<div id="banner_right" style="margin-left:240px;margin-top: 10px;padding-top: 5px;" class="display">
-			<span style="color: #808080;font-size: 1.1em;">我的</span>
-			<span style="color: #e5e5e5;margin-left: 10px;margin-left: 10px;">|</span>
-			<span style="color: #808080;font-size: 1.1em;margin-left: 10px;">日历</span>
-			<span style="color: #e5e5e5;margin-left: 10px;">|</span>
-			<img src="../static/images/question.png" style="width: 20px;margin-left: 20px;">
-			<img src="../static/images/ring.png" style="width: 20px;margin-left: 20px;">
-			<img src="../static/images/message.png" style="width: 20px;margin-left: 20px;">	
-			<img src="#" style="width: 30px;margin-left: 20px;border: 1px solid red;">	
+		<div  style="width: 6%" class="display"></div>
+		<div id="banner_right" style="padding: 0;" class="display">
+			<div class="display" style="width: 35%;"><div class="display" style="color: #808080;font-size: 1.1em;">我的</div>
+			<div class="display" style="color: #e5e5e5;margin-left: 10px;margin-left: 10px">|</div>
+			<div class="display" style="color: #808080;font-size: 1.1em;margin-left: 10px;">日历</div>
+			<div class="display" style="color: #e5e5e5;margin-left: 10px;">|</div></div>
+			<div style="width: 60%;" class="display">
+			<img src="../static/images/question.png" style="width:25px;margin-left: 20px;">
+			<img src="../static/images/ring.png" style="width: 25px;margin-left: 20px;">
+			<img src="../static/images/message.png" style="width:25px;margin-left: 20px;">
+			<img src="#" style="width:25px;margin-left: 20px;border: 1px solid red;"></div>
 		</div>
 	</div>
 	<div id="guidance">
@@ -115,18 +117,20 @@ $(function (){
 <!--			<span id="guidance_logo"><img src="#"></span>-->
 			<a href="tea_task.html"><div id="task" class="display"><span class="left_length"><span>任务</span></span></div></a>
 			<a href="tea_file.html"><div id="file" class="display"><span class="left_length"><span>文件</span></span></div></a>
+			<a href="tea_resource.html"><div id="resource" class="display"><span class="left_length"><span>资源</span></span></div></a>
 			<a href="tea_eye.html"><div id="eye" class="display"><span class="left_length"><span>鹰眼</span></span></div></a>
-			
+
 		</div>
+		<div id="temp" class="display"></div>
 		<div id="right" class="display ">
-			<img src="../static/images/people.png" style="width: 20px;margin-left: 390px;">
+			<img src="../static/images/people.png" style="width: 20px;">
 			<span style="color: #808080;">1</span>
 			<img src="../static/images/menu.png" style="width: 20px;margin-left: 30px;">
 			<span style="color: #808080">菜单</span>
 			</div>
-	
+
 	</div>
-		
+
 	<div id="main thetable" >
 		<div class="main_style_left display"></div>
 		<div class="main_style display " >
