--- a/src/main/resources/static/css/stu_task_style.css
+++ b/src/main/resources/static/css/stu_task_style.css
@@ -84,6 +84,33 @@
 #main{
 	margin-left: 5px;
 }
+#sear_around{
+/*	display: none;*/
+}
+#sear_float{
+	width: 200px;
+	height: 100px;
+	z-index: 5;
+	background: #f8f8f8;
+	position: absolute;
+	margin: 10px;
+	width: 21%;
+	height: auto;
+	border-radius: 5px;
+	float: left;
+}
+#float_ul{
+	list-style-type: none;
+}
+.float_ul_li{
+	height: 60px;
+}
+.float_li_img{
+	
+}
+.float_ul_under{
+	border-bottom: 1px solid #cfcece;
+}
 .display{
 	display: inline-block;
 }
@@ -168,6 +195,7 @@
 	height: auto;
 	-webkit-border-radius:10px;
 	position: relative;
+	z-index: 1;
 	
 }
 .word_title_img{
