--- a/src/main/resources/templates/stu_task.html
+++ b/src/main/resources/templates/stu_task.html
@@ -97,6 +97,7 @@ $(function (){
 					<ul id="float_ul">
 						<li class="float_ul_li float_ul_under">
 							<span class="float_li_img"></span>
+							<span class="float_li_name">1</span>
 						</li>
 						<li class="float_ul_li float_ul_under">
 							<span class="float_li_img"></span>
