--- a/src/main/resources/static/css/stu_task_style.css
+++ b/src/main/resources/static/css/stu_task_style.css
@@ -106,7 +106,12 @@
 	height: 60px;
 }
 .float_li_img{
-	
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;	
+	border: 1px solid red;
+	background: red;
+	margin-left: 20px;
 }
 .float_ul_under{
 	border-bottom: 1px solid #cfcece;
