--- a/src/main/resources/static/css/stu_task_style.css
+++ b/src/main/resources/static/css/stu_task_style.css
@@ -10,7 +10,7 @@
 	height: 60px;
 }
 #banner_left{
-	width: 32%;
+	width: 22%;
 	margin-left: 20px;
 	margin-top: 10px;
 	
@@ -85,33 +85,41 @@
 	margin-left: 5px;
 }
 #sear_around{
+	margin-left: -18px;
 /*	display: none;*/
 }
 #sear_float{
-	width: 200px;
-	height: 100px;
 	z-index: 5;
 	background: #f8f8f8;
 	position: absolute;
 	margin: 10px;
-	width: 21%;
+	width: 16%;
 	height: auto;
-	border-radius: 5px;
+	border-radius: 10px;
 	float: left;
 }
 #float_ul{
 	list-style-type: none;
 }
 .float_ul_li{
-	height: 60px;
+	height: 50px;
+	padding-top: 13px;
 }
 .float_li_img{
-	width: 20px;
-	height: 20px;
+	width: 25px;
+	height: 25px;
 	border-radius: 50%;	
-	border: 1px solid red;
-	background: red;
-	margin-left: 20px;
+	background: url(../images/nightfall.jpg) ;
+	margin-left: 30px;
+	display: inline-block;
+	vertical-align: middle;
+}
+.float_li_name{
+	display: inline-block;
+	vertical-align: middle;
+	font-size: 1.1em;
+	color: #8db2c1;
+	margin-left: 0.8em;
 }
 .float_ul_under{
 	border-bottom: 1px solid #cfcece;
