--- a/src/main/resources/templates/tea_task.html
+++ b/src/main/resources/templates/tea_task.html
@@ -47,6 +47,19 @@ $(function (){
 		isClose : false,  								//是否自动关闭
 		timeOut : 5000									//设置自动关闭时间，前提是isClose=true
 	});
+	$(".test2").manhuaDialog({
+		Event : "click",								//触发响应事件
+		title : "通知",					            //弹出层的标题
+		type : "id",									//弹出层类型(text、容器ID、URL、Iframe)
+		content : "message",								//弹出层的内容获取(text文本、容器ID名称、URL地址、Iframe的地址)
+		width : 290,									//弹出层的宽度
+		height : 270,									//弹出层的高度
+		scrollTop : 200,								//层滑动的高度也就是弹出层时离顶部滑动的距离
+		isAuto : false,									//是否自动弹出
+		time : 2000,									//设置弹出层时间，前提是isAuto=true
+		isClose : false,  								//是否自动关闭
+		timeOut : 5000									//设置自动关闭时间，前提是isClose=true
+	});
 });
 </script>
 
@@ -122,7 +135,7 @@ $(function (){
 			<div style="width: 60%;" class="display">
 			<img src="../static/images/question.png" style="width:25px;margin-left: 20px;">
 			<img src="../static/images/ring.png" style="width: 25px;margin-left: 20px;">
-			<img src="../static/images/message.png" style="width:25px;margin-left: 20px;">
+			<a class="test2" href="javascript:void(0)"><img src="../static/images/message.png" style="width:25px;margin-left: 20px;"></a>
 			<img src="#" style="width:25px;margin-left: 20px;border: 1px solid red;"></div>
 		</div>
 	</div>
@@ -159,7 +172,9 @@ $(function (){
 			<div class="main_style_tip" style="border-left: 10px solid #ef4e4e">
 				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
 				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
+					<p class="tip_word_title"><b>我的任务</b>
+						<a class="test1" href="javascript:void(0)"><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></a>
+					</p>
 					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
 
 					<div class="deadline">2018-9-16截止</div>
@@ -494,6 +509,39 @@ $(function (){
 		});
 	</script>
 
+	<div id="message">
+		<div class="mess_top"></div>
+		<ul>
+			<li class="mess_cont">
+				<div class="mess_cont_word">
+					<span class="cont_word_pic1"></span>
+					<span class="cont_word">B18080808张三申请加入您的实验室</span>
+				</div>
+				<div class="mess_cont_btn">
+					<span class="cont_btn_agree">同意</span>
+					<span class="cont_btn_refuse">拒绝</span>
+				</div>
+				<div class="divide_date">
+					&nbsp;2018-7-6
+				</div>
+			</li>
+			<li class="mess_cont">
+				<div class="mess_cont_word">
+					<span class="cont_word_pic2"></span>
+					<span class="cont_word">B18080808张三申请加入您的实验室</span>
+				</div>
+				<div class="mess_cont_btn">
+					<span class="cont_btn_agree">同意</span>
+					<span class="cont_btn_refuse">拒绝</span>
+				</div>
+				<div class="divide_date">
+					&nbsp;2018-7-6
+				</div>
+			</li>
+		</ul>
+	</div>
+	
+	
 	<div id="detail" style="display:none;">
 		<div id="detail_header">
 			<div class="display"><img src="../static/images/tip.png" id="detail_header_img"></div>
