--- a/src/main/resources/templates/stu_task.html
+++ b/src/main/resources/templates/stu_task.html
@@ -156,13 +156,15 @@ $(function (){
 			<span style="color: #808080">菜单</span>
 			</div>
 	</div>
+
+
 	<div id="main thetable" style="z-index: 1;" >
 		<div class="main_style_left display"></div>
 		<div class="main_style display " >
 			<span style="width:40%;display: inline-block;"></span>
 			<span class="title" style=""><strong class="title_word">暂存</strong></span>
-			<div class="pre-scrollable" style="height:500px;">
-				<div class="main_style_tip" style="border-left: 10px solid #ef4e4e ">
+			<ul class="pre-scrollable" style="height:500px;list-style:none;">
+				<li class="main_style_tip" style="border-left: 10px solid #ef4e4e ">
 				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
 				<div class="main_style_tip_word display">
 					<p class="tip_word_title"><b>我的任务</b>
@@ -176,112 +178,8 @@ $(function (){
 						</div>
 					</div>
 				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp">
-						<div class="modify">修改</div>
-						<div class="delete">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp">
-						<div class="modify">修改</div>
-						<div class="delete">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp">
-						<div class="modify">修改</div>
-						<div class="delete">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp">
-						<div class="modify">修改</div>
-						<div class="delete">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp">
-						<div class="modify">修改</div>
-						<div class="delete">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp">
-						<div class="modify">修改</div>
-						<div class="delete">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp">
-						<div class="modify">修改</div>
-						<div class="delete">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp">
-						<div class="modify">修改</div>
-						<div class="delete">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			</div>
+			</li>
+			</ul>
 			</div>
 		<div class="main_style_leng display"></div>
 		<div class="main_style display " >
