--- a/src/main/resources/templates/stu_task.html
+++ b/src/main/resources/templates/stu_task.html
@@ -46,6 +46,11 @@ $(function (){
 	});
 });
 </script>
+	<style type="text/css">
+		ul{
+			list-style: none;
+		}
+	</style>
 	
 
 <script type="text/javascript">
@@ -87,9 +92,307 @@ $(function (){
 			
 		})
 	</script>
-	<style type="text/css">
-		
-	</style>
+
+	<script type="text/javascript">
+		$(function(){
+			function addImg1(aSpan){
+				var aImg=document.createElement("img");
+				aImg.setAttribute("class","main_style_tip_img");
+				aImg.setAttribute("src","../static/images/tip.png");
+				aSpan.appendChild(aImg);
+			}
+			function addSpan(aLi){
+				var aSpan=document.createElement("span");
+				addImg1(aSpan);
+				aLi.appendChild(aSpan);
+			}
+			
+			function addB(aP){
+				var aB=document.createElement("b");
+				aB.innerHTML=("我的任务");
+				aP.appendChild(aB)
+			}
+			
+			function addImg2(aA){
+				var aImg=document.createElement("img");
+				aImg.setAttribute("class","word_title_img");
+				aImg.setAttribute("src","../static/images/document.png");
+				aImg.setAttribute("alt","查看详情");
+				aA.appendChild(aImg);
+			}
+			
+			function addA(aP){
+				var aA=document.createElement("a");
+				aA.setAttribute("class","test1");
+				aA.setAttribute("href","javascript:void(0)");
+				addImg2(aA);
+				aP.appendChild(aA);
+			}
+			
+			function addP(aDiv){
+				var aP=document.createElement("p");
+				aP.setAttribute("class","tip_word_title");
+				
+				addB(aP);
+				addA(aP);
+				
+				aDiv.appendChild(aP);
+			}
+			
+			function addBtn1(aDiv){
+				var aBtn=document.createElement("button");
+				aBtn.setAttribute("type","button");
+				aBtn.setAttribute("class","modify");
+				aBtn.innerHTML="修改";
+				aDiv.appendChild(aBtn);
+			}
+			
+			function addBtn2(aDiv){
+				var aBtn=document.createElement("button");
+				aBtn.setAttribute("type","button");
+				aBtn.setAttribute("class","delete");
+				aBtn.innerHTML="删除";
+				aDiv.appendChild(aBtn);
+			}
+			
+			function addDiv3(aDiv){
+				var aDiv3=document.createElement("div");
+				aDiv3.setAttribute("class","icon_temp");
+				addBtn1(aDiv3);
+				addBtn2(aDiv3);
+				aDiv.appendChild(aDiv3);
+			}
+			
+			function addDiv2(aDiv){
+				var aDiv3=document.createElement("div");
+				aDiv3.innerHTML=("基于微信服务的师生项目交互平台基于微信服务的师生项目......");
+				aDiv3.setAttribute("class","main_style_belly");
+				addDiv3(aDiv3);
+				aDiv.appendChild(aDiv3);
+			}
+			
+			function addDiv1(aLi){
+				var aDiv=document.createElement("div");
+				aDiv.setAttribute("class","main_style_tip_word");
+				addP(aDiv);
+				addDiv2(aDiv);
+				
+				
+				aLi.appendChild(aDiv);
+//				alert("1")
+			}
+			function addLi(){
+				var aLi=document.createElement("li");
+				var aUl=document.getElementById("addLi1");
+//				aLi.class="main_style_tip";
+				aLi.setAttribute("class","main_style_tip");
+				addSpan(aLi);
+				addDiv1(aLi);
+				aUl.appendChild(aLi);
+			}
+			var test=document.getElementById("test11");
+			test.onclick=function(){
+				addLi();
+			}
+		})
+	</script>
+	<script type="text/javascript">
+		$(function(){
+			function addImg1(aSpan){
+				var aImg=document.createElement("img");
+				aImg.setAttribute("class","main_style_tip_img");
+				aImg.setAttribute("src","../static/images/tip.png");
+				aSpan.appendChild(aImg);
+			}
+			function addSpan(aLi){
+				var aSpan=document.createElement("span");
+				addImg1(aSpan);
+				aLi.appendChild(aSpan);
+			}
+			
+			function addB(aP){
+				var aB=document.createElement("b");
+				aB.innerHTML=("我的任务");
+				aP.appendChild(aB)
+			}
+			
+			function addImg2(aA){
+				var aImg=document.createElement("img");
+				aImg.setAttribute("class","word_title_img");
+				aImg.setAttribute("src","../static/images/document.png");
+				aImg.setAttribute("alt","查看详情");
+				aA.appendChild(aImg);
+			}
+			
+			function addA(aP){
+				var aA=document.createElement("a");
+				aA.setAttribute("class","test1");
+				aA.setAttribute("href","javascript:void(0)");
+				addImg2(aA);
+				aP.appendChild(aA);
+			}
+			
+			function addP(aDiv){
+				var aP=document.createElement("p");
+				aP.setAttribute("class","tip_word_title");
+				
+				addB(aP);
+				addA(aP);
+				
+				aDiv.appendChild(aP);
+			}
+			
+			function addBtn1(aDiv){
+				var aBtn=document.createElement("button");
+				aBtn.setAttribute("type","button");
+				aBtn.setAttribute("class","judge");
+				aBtn.innerHTML="未审核";
+				aDiv.appendChild(aBtn);
+			}
+			
+			function addBtn2(aDiv){
+				var aBtn=document.createElement("button");
+				aBtn.setAttribute("type","button");
+				aBtn.setAttribute("class","delete_doing");
+				aBtn.innerHTML="删除";
+				aDiv.appendChild(aBtn);
+			}
+			
+			function addDiv3(aDiv){
+				var aDiv3=document.createElement("div");
+				aDiv3.setAttribute("class","icon_temp_doing");
+				addBtn1(aDiv3);
+				addBtn2(aDiv3);
+				aDiv.appendChild(aDiv3);
+			}
+			
+			function addDiv2(aDiv){
+				var aDiv3=document.createElement("div");
+				aDiv3.innerHTML=("基于微信服务的师生项目交互平台基于微信服务的师生项目......");
+				aDiv3.setAttribute("class","main_style_belly");
+				addDiv3(aDiv3);
+				aDiv.appendChild(aDiv3);
+			}
+			
+			function addDiv1(aLi){
+				var aDiv=document.createElement("div");
+				aDiv.setAttribute("class","main_style_tip_word");
+				addP(aDiv);
+				addDiv2(aDiv);
+				
+				
+				aLi.appendChild(aDiv);
+//				alert("1")
+			}
+			function addLi(){
+				var aLi=document.createElement("li");
+				var aUl=document.getElementById("addLi2");
+//				aLi.class="main_style_tip";
+				aLi.setAttribute("class","main_style_tip");
+				addSpan(aLi);
+				addDiv1(aLi);
+				aUl.appendChild(aLi);
+			}
+			var test=document.getElementById("test22");
+			test.onclick=function(){
+				addLi();
+			}
+		})
+	</script>
+	<script type="text/javascript">
+		$(function(){
+			function addImg1(aSpan){
+				var aImg=document.createElement("img");
+				aImg.setAttribute("class","main_style_tip_img");
+				aImg.setAttribute("src","../static/images/tip.png");
+				aSpan.appendChild(aImg);
+			}
+			function addSpan(aLi){
+				var aSpan=document.createElement("span");
+				addImg1(aSpan);
+				aLi.appendChild(aSpan);
+			}
+			
+			function addB(aP){
+				var aB=document.createElement("b");
+				aB.innerHTML=("我的任务");
+				aP.appendChild(aB)
+			}
+			
+			function addImg2(aA){
+				var aImg=document.createElement("img");
+				aImg.setAttribute("class","word_title_img");
+				aImg.setAttribute("src","../static/images/document.png");
+				aImg.setAttribute("alt","查看详情");
+				aA.appendChild(aImg);
+			}
+			
+			function addA(aP){
+				var aA=document.createElement("a");
+				aA.setAttribute("class","test1");
+				aA.setAttribute("href","javascript:void(0)");
+				addImg2(aA);
+				aP.appendChild(aA);
+			}
+			
+			function addP(aDiv){
+				var aP=document.createElement("p");
+				aP.setAttribute("class","tip_word_title");
+				
+				addB(aP);
+				addA(aP);
+				
+				aDiv.appendChild(aP);
+			}
+			
+			function addBtn1(aDiv){
+				var aBtn=document.createElement("button");
+				aBtn.setAttribute("type","button");
+				aBtn.setAttribute("class","judge_self");
+				aBtn.innerHTML="自评";
+				aDiv.appendChild(aBtn);
+			}
+			
+			
+			function addDiv3(aDiv){
+				var aDiv3=document.createElement("div");
+				addBtn1(aDiv3);
+				aDiv.appendChild(aDiv3);
+			}
+			
+			function addDiv2(aDiv){
+				var aDiv3=document.createElement("div");
+				aDiv3.innerHTML=("基于微信服务的师生项目交互平台基于微信服务的师生项目......");
+				aDiv3.setAttribute("class","main_style_belly");
+				addDiv3(aDiv3);
+				aDiv.appendChild(aDiv3);
+			}
+			
+			function addDiv1(aLi){
+				var aDiv=document.createElement("div");
+				aDiv.setAttribute("class","main_style_tip_word");
+				addP(aDiv);
+				addDiv2(aDiv);
+				
+				
+				aLi.appendChild(aDiv);
+//				alert("1")
+			}
+			function addLi(){
+				var aLi=document.createElement("li");
+				var aUl=document.getElementById("addLi3");
+//				aLi.class="main_style_tip";
+				aLi.setAttribute("class","main_style_tip");
+				addSpan(aLi);
+				addDiv1(aLi);
+				aUl.appendChild(aLi);
+			}
+			var test=document.getElementById("test33");
+			test.onclick=function(){
+				addLi();
+			}
+		})
+	</script>
 </head>
 	
 <body>
@@ -159,61 +462,11 @@ $(function (){
 			</div>
 	</div>
 	<div id="main thetable" style="z-index: 1;" >
-		
-			<script type="text/javascript">
-				$(function(){
-					function addImg1(aSpan){
-						var aImg=document.createAttribute("img");
-						aImg.setAttribute("class","main_style_tip_img");
-						aImg.setAttribute("src","../static/images/tip.png");
-						aSpan.appendChild(aImg);
-					}
-					function addSpan(aLi){
-						var aSpan=document.createAttribute("span");
-						aLi.appendChild(aSpan);
-					}
-					function addDiv1(aLi){
-						var aDiv=document.createAttribute("div");
-						aDiv.setAttribute("class","main_style_tip_word");
-						ali.appendChild(aDiv);
-					}
-					function addLi(){
-						var aLi=document.createAttribute("li");
-						var aUl=document.getElementById("addLi");
-//						aLi.setAttribute("class","main_style_tip");
-						aLi.class="main_style_tip";
-						aUl.appendChild(aLi);
-						alert("2")
-						addSpan(aLi);
-						addDiv1(aLi);
-					}
-					var test=document.getElementById("test12");
-					test.onclick=function(){
-						addLi();
-					}
-				})
-			</script>
 		<div class="main_style_left display"></div>
 		<div class="main_style display " >
 			<span style="width:40%;display: inline-block;"></span>
-			<span class="title" style=""><strong class="title_word">暂存</strong></span>
-			<ul class="pre-scrollable" id="addLi" style="height:500px;list-style:none;">
-				<button id="test12" style="border: 1px solid red;z-index: 100;width: 30px;height: 40px;"></button>
-				<li class="main_style_tip">
-					<span><img src="../static/images/tip.png" class="main_style_tip_img"></span>
-					<div class="main_style_tip_word">
-						<p class="tip_word_title"><b>我的任务</b>
-							<a class="test1" href="javascript:void(0)"><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></a>
-						</p>
-						<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-
-						<div class="icon_temp">
-							<div class="modify">修改</div>
-							<div class="delete">删除</div>
-							</div>
-						</div>
-					</div>
-				</li>
+			<span class="title" ><strong class="title_word" id="test11">暂存</strong></span>
+			<ul class="pre-scrollable" id="addLi1" style="height:500px;list-style:none;">
 			</ul>
 			
 			</div>
@@ -221,108 +474,19 @@ $(function (){
 		<div class="main_style display " >
 			
 			<span style="width:37%;display: inline-block;"></span>
-			<span class="title" style=""><strong class="title_word">进行中</strong></span>
-			<div class="pre-scrollable" style="height: 500px;">
-			<div class="main_style_tip" style="border-left: 10px solid #ef4e4e ">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-<!--					<div class="deadline">2018-9-16截止</div>-->
-						
-					<div class="icon_temp_doing">
-						<div class="judge">未审核</div>
-						<div class="delete_doing">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp_doing">
-						<div class="judge">未审核</div>
-						<div class="delete_doing">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div class="main_style_tip" style="border-left: 10px solid #989392">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp_doing">
-						<div class="judge">未审核</div>
-						<div class="delete_doing">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="icon_temp_doing">
-						<div class="judge">未审核</div>
-						<div class="delete_doing">删除</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			
-			</div>
+			<span class="title" style=""><strong id="test22" class="title_word">进行中</strong></span>
+			<ul class="pre-scrollable" id="addLi2" style="height: 500px;">
+				
+			</ul>
 			</div>
 		<div class="main_style_leng display"></div>
 		<div class="main_style display " >
 			
 			<span style="width:37%;display: inline-block;"></span>
-			<span class="title" style=""><strong class="title_word">已结束</strong></span>
-			<div class="pre-scrollable" style="height: 500px;">
-			<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="">
-						<div class="judge_self">自评</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="">
-						<div class="judge_self">自评</div>
-						</div>
-					</div>
-				</div>
-			</div>
-				<div  class="main_style_tip" style="border-left:10px solid #fff;">
-				<span><img src="../static/images/tip.png" style="width:20px; margin-top: -5px;"></span>
-				<div class="main_style_tip_word display">
-					<p class="tip_word_title"><b>我的任务</b><img class="word_title_img" alt="查看详情" src="../static/images/document.png" ></p>
-					<div class="main_style_belly display">基于微信服务的师生项目交互平台基于微信服务的师生项目......
-					
-					<div class="">
-						<div class="judge_self">自评</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			</div>
+			<span class="title" style=""><strong class="title_word" id="test33">已结束</strong></span>
+			<ul class="pre-scrollable" id="addLi3" style="height: 500px;">
+				
+			</ul>
 			</div>
 		<div class="main_style_left display"></div>
 	</div>
